--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   table_calendar: ^2.2.2
   font_awesome_flutter: ^8.5.0
+  shared_preferences: ^0.5.6+1
+  provider: ^4.0.2
 
 dev_dependencies:
   flutter_test:
