--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   shared_preferences: ^0.5.6+1
   provider: ^4.0.2
+  firebase_auth: ^0.15.4
+  cloud_firestore: ^0.13.0+1
 
 dev_dependencies:
   flutter_test:
