--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   table_calendar: ^2.2.2
   font_awesome_flutter: ^8.5.0
+  email_validator: ^1.0.4
   shared_preferences: ^0.5.6+1
   provider: ^4.0.2
   firebase_auth: ^0.15.4
