--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   firebase_core: ^0.4.3+3
   flutter_spinkit: ^4.1.1+1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
