--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,9 +61,10 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    // implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    // implementation 'com.google.firebase:firebase-auth:19.4.0'
+    // implementation 'com.google.firebase:firebase-firestore:21.6.0'
+    // implementation 'com.google.firebase:firebase-messaging:20.2.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
