--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   email_validator: ^1.0.4
   shared_preferences: ^0.5.6+1
-  provider: ^4.0.2
-  firebase_auth: ^0.15.4
-  cloud_firestore: ^0.13.0+1
-  firebase_core: ^0.4.3+3
+  provider: 4.0.4
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
   flutter_spinkit: ^4.1.1+1
   intl: ^0.16.1
   easy_dialog: ^1.0.5
