Fix calculation bugs & add pdf generation code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: ^4.1.1+1
   intl: ^0.16.1
   easy_dialog: ^1.0.5
+  pdf: ^1.11.2
 
 dev_dependencies:
   flutter_test:
