--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,10 +47,40 @@ android {
     }
 
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+        debug {
             signingConfig signingConfigs.debug
+        }
+        release {
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "app-${variant.getName()}.apk"
+                }
+            }
+        }
+    }
+
+    // buildTypes {
+    //     release {
+    //         // TODO: Add your own signing config for the release build.
+    //         // Signing with the debug keys for now, so `flutter run --release` works.
+    //         signingConfig signingConfigs.debug
+    //     }
+    // }
+
+    flavorDimensions "flavor-type"
+
+    productFlavors {
+        development {
+            dimension "flavor-type"
+            applicationId "com.prism.mess_meal"
+            versionCode 1
+            versionName "1.0"
+        }
+        production {
+            dimension "flavor-type"
+            applicationId "com.prism.mess_meal_production"
+            versionCode 1
+            versionName "1.0"
         }
     }
 }
