--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,16 +56,9 @@ android {
                     outputFileName = "app-${variant.getName()}.apk"
                 }
             }
+            signingConfig signingConfigs.debug
         }
     }
-
-    // buildTypes {
-    //     release {
-    //         // TODO: Add your own signing config for the release build.
-    //         // Signing with the debug keys for now, so `flutter run --release` works.
-    //         signingConfig signingConfigs.debug
-    //     }
-    // }
 
     flavorDimensions "flavor-type"
 
